# clinicplus-biometrics

./: .gitignore
fingerprint_patient_repo/: .gitignore  README.md  main.py
fingerprint_patient_repo/cpp/: CMakeLists.txt  main.cpp
fingerprint_patient_repo/tests/: test_main.py
